# graveler

./: .gitignore  README.md
src/c/: CMakeLists.txt  graveler_c.c  graveler_c.h
src/opencl/: CMakeLists.txt  main.c  main.h
src/python/: requirements.txt  simulate.py
